--- a/about.html
+++ b/about.html
@@ -46,7 +46,14 @@
             my heart in their love." - Mary Shelley</quote>
     </div>
 
-    <p>Interests - </p>
+    <p>Programming Languages: Python, Java, Javascript, HTML, CSS </p>
+    <p>Favorite Genres: Musical Theatre Songs, Romantic Poems, 
+        Gothic Literature, Platformer Games, Impressionism Art, 
+        Animated Films
+    </p>
+    <p>Hobbies: Creative Writing, Video Games, Trivia Tournaments,
+        Reading
+    </p>
 
     <img src="books.png" class="headimg">
 
