--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,18 @@
             </p>
         </div>
     </div>
+    <div class="main">
+        <p>Sea Otter Awareness: An activist website
+            promoting the plight of Sea Otters,
+            offering information to educate readers, 
+            and serving as a contact point to get
+            involved. Check out the project 
+            <a href="https://github.com/KateCheng26/Sea-Otter-Awareness" class="link">here.</a>
+        </p>
+        <div class="column">
+            <img src="example_otter.png" class="img2">
+        </div>
+    </div>
     
 
     <img src="link_autumn.jfif" class="headimg">
