--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,7 @@
     </div>
 
     <p class="contact">♡₊˚┊ <a href="mailto:firekitty22@icloud.com" class="link">email</a></p>
+    <p class="contact">♡₊˚┊ <a href="https://github.com/KateCheng26" class="link">github</a> </p>
     <p class="contact">♡₊˚┊ <a href="https://open.spotify.com/user/9qfm42aze0hnwzxsxduhm6451?si=08d4c5a9ff5d4e19" class="link">spotify</a> </p>
     <p class="contact">♡₊˚┊ <a href="https://pin.it/vUvA5itcw" class="link">pinterest</a> </p>
     
