--- a/projects.html
+++ b/projects.html
@@ -45,11 +45,11 @@
     </div>
 
     <div class="main">
-        <p>Poker Project: A python coded game of Poker, 
+        <p class="projectdesc"><a href="https://github.com/KateCheng26" class="link"></a>Poker Project: A python coded game of Poker, 
             which can be played through a computer, where 
             the computer can deal cards randomly from a 
             deck and differentiate between two (or more) 
-            hands of cards to determine a winner.</p>
+            hands of cards to determine a winner.</a></p>
         <div class="column">
             <img src="poker.png" class="img2">
         </div>
@@ -57,23 +57,22 @@
     <div class="main">
         <img src="project2.png" class="img2">
         <div class="column">
-            <p class="rightside">Binary Search Tree Project: 
+            <p class="rightside"><a href="https://github.com/KateCheng26" class="link"></a>Binary Search Tree Project: 
                 Binary Search Tree optimized for a dataset
                 of books with a title attribute which is 
                 used to sort them alphabetically. The displayed
                 code segment is the get function for the 
                 search tree where the data for a book is 
-                returned when given the title. 
+                returned when given the title.</a>
             </p>
         </div>
     </div>
     <div class="main">
-        <p>Sea Otter Awareness: An activist website
+        <p class="projectdesc"><a href="https://github.com/KateCheng26/Sea-Otter-Awareness"></a>Sea Otter Awareness: An activist website
             promoting the plight of Sea Otters,
             offering information to educate readers, 
             and serving as a contact point to get
-            involved. Check out the project 
-            <a href="https://github.com/KateCheng26/Sea-Otter-Awareness" class="link">here.</a>
+            involved. </a>
         </p>
         <div class="column">
             <img src="example_otter.png" class="img2">
